Formaat blokken thuispagina + tabel en lijst

--- a/bedreigingen/zijpaginaZwakhedenGebruiker.html
+++ b/bedreigingen/zijpaginaZwakhedenGebruiker.html
@@ -29,12 +29,12 @@
 
 <article class="kop_samenvattingZwakhedenGebruiker2">
     Veel websites hebben specifieke eisen om de sterkte van wachtwoorden te beoordelen, zodat gegevens goed beveiligd zijn. Er zijn verschillende methoden om de sterkte van een wachtwoord te meten:
-(lijst)
-    Entropie: Dit is gebaseerd op de willekeurigheid van informatie en gemeten door de formule van Claude Shannon, die de willekeurigheid van gegevens bepaalt. Hoe meer willekeurig een wachtwoord is, hoe moeilijker het is om te raden.
-Aantal vergelijkbare wachtwoorden: Wachtwoorden die lijken op veel voorkomende patronen of andere wachtwoorden zijn minder uniek en daardoor minder sterk. Het vergelijken van uniekheid van wachtwoorden kan helpen om de sterkte ervan te beoordelen.
-zxcvbn algoritmen: Een medewerker van Dropbox ontwikkelde het zxcvbn die op basis van patronen slim wachtwoorden analyseert en ook nog controleert op het gebruik van bekende woorden, wat de beoordeling van de wachtwoordsterkte verbetert.
+<ul>
+    <li>Entropie: Dit is gebaseerd op de willekeurigheid van informatie en gemeten door de formule van Claude Shannon, die de willekeurigheid van gegevens bepaalt. Hoe meer willekeurig een wachtwoord is, hoe moeilijker het is om te raden.</li>
+<li>Aantal vergelijkbare wachtwoorden: Wachtwoorden die lijken op veel voorkomende patronen of andere wachtwoorden zijn minder uniek en daardoor minder sterk. Het vergelijken van uniekheid van wachtwoorden kan helpen om de sterkte ervan te beoordelen.</li>
+<li>zxcvbn algoritmen: Een medewerker van Dropbox ontwikkelde het zxcvbn die op basis van patronen slim wachtwoorden analyseert en ook nog controleert op het gebruik van bekende woorden, wat de beoordeling van de wachtwoordsterkte verbetert.</li>
+</ul>
 Het beheren van verschillende wachtwoorden voor diverse websites kan lastig zijn. Een oplossing hiervoor is een passwordmanager. Dit is software die wachtwoorden veilig opslaat, zodat er slechts één sterk wachtwoord nodig is. Deze manager vult automatisch de juiste inloggegevens in wanneer er een website bezocht wordt. 
-
     </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
