--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
  
  <article class="koptitel"><h1 id="2ofzo">Bedreigingen</h1></article>
 
- <article class="kop_samenvatting"><p>De digitale veiligheid van gebruikers online wordt op allerlei manieren bedreigd. Aanvallers zoeken naar manieren om toegang tot gegevens te krijgen en die te gebruiken. Ze maken gebruik van de 3 verschillende soorten zwakheden:</p>
+ <article class="kop_samenvattingBedreigingen"><p>De digitale veiligheid van gebruikers online wordt op allerlei manieren bedreigd. Aanvallers zoeken naar manieren om toegang tot gegevens te krijgen en die te gebruiken. Ze maken gebruik van de 3 verschillende soorten zwakheden:</p>
   <ul>
     <li>Zwakheden in de architectuur;</li>
     <li>Zwakheden in communicatie;</li>
@@ -122,7 +122,7 @@
  
  <article class="koptitel"><h1 id="3ofzo">Aanvallers en verdedigers</h1></article>
 
- <article class="kop_samenvatting">
+ <article class="kop_samenvattingAanvallers">
   <p>
     In de digitale wereld zijn er verschillende rollen: aanvallers en verdedigers. Verdedigers proberen steeds betere beveiliging te ontwikkelen, terwijl aanvallers juist voortdurend nieuwe manieren bedenken om door deze beveiliging te breken. Vaak worden alle aanvallers 'hackers' genoemd, terwijl er ook juist ethische hackers zijn die helpen bij het verbeteren van beveiliging door de zwakheden te vinden en melden. Niet alle hackers zijn dus internetcriminelen. Overheden kunnen gebruik maken van hacken om criminelen en terroristen op te sporen. Computercriminaliteit omvat dus verschillende soorten aanvallen en verdedigers, wat alles veel complexer maakt.
 </p>
@@ -160,7 +160,7 @@
    
  <article class="koptitel"><h1 id="4ofzo">Maatregelen</h1></article>
 
- <article class="kop_samenvatting"><p>Er zijn veel partijen nodig om de veiligheid van ICT-systemen goed te houden: cybersecuritybedrijven, de overheid, softwareontwikkelaars en de gebruikers. Om de veiligheid van een systeem te vergroten, kunt u veel maatregelen nemen. Deze maatregelen zijn te verdelen in 4 soorten: preventie, detectie, repressie en correctie. In de onderstaande stukjes wordt uitgelegd wat die maatregelen inhouden. U gaat ook wat lezen over wat u zelf kunt doen om uw veiligheid online te vergroten. Hierbij is ook een test te vinden over phishing en of u dat kunt herkennen.
+ <article class="kop_samenvattingMaatregelen"><p>Er zijn veel partijen nodig om de veiligheid van ICT-systemen goed te houden: cybersecuritybedrijven, de overheid, softwareontwikkelaars en de gebruikers. Om de veiligheid van een systeem te vergroten, kunt u veel maatregelen nemen. Deze maatregelen zijn te verdelen in 4 soorten: preventie, detectie, repressie en correctie. In de onderstaande stukjes wordt uitgelegd wat die maatregelen inhouden. U gaat ook wat lezen over wat u zelf kunt doen om uw veiligheid online te vergroten. Hierbij is ook een test te vinden over phishing en of u dat kunt herkennen.
 </p></article>
 
  <div class="plaatjes_klein"><img
