--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -31,15 +31,15 @@
 
 <article class="kop_samenvattingdetectie2">
     <p>
-        Firewall<br>Een firewall is een systeem dat al het inkomende netwerkverkeer scant. Dit is een belangrijk hulpmiddel om hackers, malware en spam tegen te gaan. Een firewall bekijkt of het verkeer afkomstig is van een betrouwbare bron en checkt alle datapakketten. Een firewall kan op een computer of netwerk. Bij een firewall wordt er gecontroleerd &rsquo;aan de poort&rsquo; en kan netwerkverkeer dan toegang geven of weigeren.
+        <span class="bold-word">Firewall</span><br>Een firewall is een systeem dat al het inkomende netwerkverkeer scant. Dit is een belangrijk hulpmiddel om hackers, malware en spam tegen te gaan. Een firewall bekijkt of het verkeer afkomstig is van een betrouwbare bron en checkt alle datapakketten. Een firewall kan op een computer of netwerk. Bij een firewall wordt er gecontroleerd &rsquo;aan de poort&rsquo; en kan netwerkverkeer dan toegang geven of weigeren.
     </p>
 
     <p>
-        IDS<br>Een belangrijke aanvulling op firewalls bij netwerken is een Intrusion Detection System. Een IDS onderzoekt al het dataverkeer in een netwerk. Zo controleert het bijvoorbeeld op hackpogingen of DDoS-aanvallen. Bij een IDS wordt er binnen het netwerk gecontroleerd of alles &rsquo;normaal&rsquo; verloopt op basis van statistieken. Zo kan er een ongewoon grote drukte wijzen op een aanval.
+        <span class="bold-word">IDS</span><br>Een belangrijke aanvulling op firewalls bij netwerken is een Intrusion Detection System. Een IDS onderzoekt al het dataverkeer in een netwerk. Zo controleert het bijvoorbeeld op hackpogingen of DDoS-aanvallen. Bij een IDS wordt er binnen het netwerk gecontroleerd of alles &rsquo;normaal&rsquo; verloopt op basis van statistieken. Zo kan er een ongewoon grote drukte wijzen op een aanval.
     </p>
 
     <p>
-        Anti-malware software<br>Anti-malware software is een derde belangrijk type detectiehulpmiddel. Deze scant het apparaat op malware en verwijdert die. In een grote database staan kenmerken over allerlei soorten malware. Met de hulp van deze gegevens kan de anti-malware software dus malware detecteren.
+        <span class="bold-word">Anti-malware software</span><br>Anti-malware software is een derde belangrijk type detectiehulpmiddel. Deze scant het apparaat op malware en verwijdert die. In een grote database staan kenmerken over allerlei soorten malware. Met de hulp van deze gegevens kan de anti-malware software dus malware detecteren.
         De Play Store en App Store controleren apps ook op malware en het ongeoorloofd verzamelen van informatie, voordat een app kan worden gedownload. 
     </p>
 </article>
