--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 </p></article>
 
  <div class="plaatjes_klein"><img
-  src="afbeeldingen/authenticatie1.webp"
+  src="afbeeldingen/Authenticatie1.webp"
   alt=" Afbeelding van koe"></div>
 
  <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  src="afbeeldingen/Integriteit.jpeg"
   alt=" Afbeelding van koe"></div>
 
   <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  src="afbeeldingen/Beschikbaarheid.jpg
   alt=" Afbeelding van koe"></div>
 
  <nav class="deelkopje_nav">
