--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   alt=" Afbeelding van koe"></div>
 
  <div class="plaatjes_klein"><img
-  src="afbeeldingen/Integriteit.jpeg"
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></div>
 
   <div class="plaatjes_klein"><img
-  src="afbeeldingen/Beschikbaarheid.jpg
+  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
   alt=" Afbeelding van koe"></div>
 
  <nav class="deelkopje_nav">
