--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
   alt=" Afbeelding van koe"></div>
 
  <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  src="afbeeldingen/ethisch-hackers.webp"
   alt=" Afbeelding van koe"></div>
 
   <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  src="afbeeldingen/Zerodays.jpg"
   alt=" Afbeelding van koe"></div>
 
   <nav class="deelkopje_nav">
