--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  <div id="bigimage"> 
   <img
     src="afbeeldingen/Digitale_veiligheid.jpeg"
-    alt="digitale_veiligheid"> </div>
+    alt="Digitale_veiligheid"> </div>
 
  <article class="samenvatting_homepage"> <h3>Inleiding</h3><p>Door digitale technologieën is het functioneren van onze maatschappij veranderd. Het heeft ook invloed op hoe wij leven. Er ontstaan iedere dag nieuwe mogelijkheden om te werken, te ontspannen en om met elkaar contact te hebben. Er worden veel persoonlijke gegevens verzameld bij het gebruik van digitale technologieën. Zo heeft iedereen zijn eigen digitale identiteit. Helaas wordt de digitale veiligheid op allerlei manieren bedreigd. Aanvallers proberen door zwakheden in de beveiliging onze digitale gegevens te stelen. Het is net een kat- en muisspel tussen aanvallers en verdedigers. Op deze website leest u alles over digitale veiligheid, bedreigingen, aanvallers en verdedigers en wat voor maatregelen u zelf kunt nemen.</p>
 </article>
@@ -50,15 +50,15 @@
 
  <div class="plaatjes_klein"><img
   src="afbeeldingen/Authenticatie1.webp"
-  alt=" Afbeelding van koe"></div>
+  alt=" Afbeelding authenticatie"></div>
 
  <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></div>
+  src="afbeeldingen/Integriteit.jpeg"
+  alt=" Afbeelding integriteit"></div>
 
   <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></div>
+  src="afbeeldingen/Beschikbaarheid.jpg"
+  alt=" Afbeelding beschikbaarheid"></div>
 
  <nav class="deelkopje_nav">
   <p>
