--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
   alt=" Afbeelding van koe"></div>
 
   <p>
- <nav class="deelkopje_nav"><p><a href="maatregelen/zijpaginaPreventie.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat... <a href="maatregelen/zijpaginaPreventie.html">Lees meer</a>
+ <nav class="deelkopje_navLaatste"><p><a href="maatregelen/zijpaginaPreventie.html">Preventie</a><br>Preventieve beveiligingsmaatregelen zijn maatregelen die worden genomen om problemen te voorkomen. Dat begint bij de hardware veilig te maken en de software up-to-date te houden. Dat betekent bijvoorbeeld voor softwareontwikkelaars dat... <a href="maatregelen/zijpaginaPreventie.html">Lees meer</a>
   
 </p>
   
  </nav>
 
- <nav class="deelkopje_nav"><p>
+ <nav class="deelkopje_navLaatste"><p>
   <a href="maatregelen/zijpaginaDetectie.html">Detectie</a><br>Software is helaas niet perfect. Er zijn altijd kwetsbaarheden waar misbruik van kan worden gemaakt. Detectie, controle op misbruik, is daarom nodig. Zo wordt bijvoorbeeld bijgehouden hoe vaak er wordt geprobeerd in te loggen onder een bepaalde gebruikersnaam... <a href="maatregelen/zijpaginaDetectie.html">Lees meer</a>
 
 
@@ -188,7 +188,7 @@
 
  </nav>
 
- <nav class="deelkopje_nav"><p>
+ <nav class="deelkopje_navLaatste"><p>
   <a href="maatregelen/zijpaginaRepressie_en_correctie">Repressie en correctie</a><br>Als er malware wordt aangetroffen moeten er maatregelen worden genomen, repressie. Er moet ook eventueel schade worden hersteld, correctie. Welke maatregelen nodig zijn, hangt af van de soort aanval... <a href="maatregelen/zijpaginaRepressie_en_correctie">Lees meer</a>
   </p>
  </nav>
