--- a/digitale_veiligheid/zijpaginaIntegriteit.html
+++ b/digitale_veiligheid/zijpaginaIntegriteit.html
@@ -5,7 +5,7 @@
 
     <title>Intergriteit</title>
 
-    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
+    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css">
 
 </head>
 
