--- a/aanvallers_en_verdedigers/zijpaginaZerodays.html
+++ b/aanvallers_en_verdedigers/zijpaginaZerodays.html
@@ -5,7 +5,7 @@
 
     <title>Zero days</title>
 
-    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
+    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css">
 
 </head>
 
