--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <title>Security</title>
 
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="style.css" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -127,16 +127,16 @@
 </article>
 
  <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
-  alt=" Afbeelding van koe"></div>
+  src="afbeeldingen/computervredebreuk1.jfif"
+  alt=" Afbeelding_Computervredebreuk"></div>
 
  <div class="plaatjes_klein"><img
   src="afbeeldingen/ethisch-hackers.webp"
-  alt=" Afbeelding van koe"></div>
+  alt=" Afbeelding_Etisch-hackers"></div>
 
   <div class="plaatjes_klein"><img
   src="afbeeldingen/Zerodays.jpg"
-  alt=" Afbeelding van koe"></div>
+  alt=" Afbeelding_Zerodays"></div>
 
   <nav class="deelkopje_nav">
     <p>
