--- a/maatregelen/zijpaginaDetectie.html
+++ b/maatregelen/zijpaginaDetectie.html
@@ -5,7 +5,7 @@
 
     <title>Detectie</title>
 
-    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css" />
+    <link href="../Zijpagina_style.css" rel="stylesheet" type="text/css">
 
 </head>
 
