--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 </article>
 
  <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  src="afbeeldingen/Architectuur.jpg"
   alt=" Afbeelding van koe"></div>
 
  <div class="plaatjes_klein"><img
-  src="https://www.de-lage-landen.com/uploads/_detail900/Koe-c-Jan-Koetsier.jpg"
+  src="afbeeldingen/Encryptie.jpg"
   alt=" Afbeelding van koe"></div>
 
   <div class="plaatjes_klein"><img
