--- a/maatregelen/zijpaginaRepressie_en_correctie.html
+++ b/maatregelen/zijpaginaRepressie_en_correctie.html
@@ -34,6 +34,9 @@
     <p>
         Systemen zullen uitvallen of moeten worden uitgezet als de problemen serieuzer zijn. Zo wordt er bijvoorbeeld voorkomen dat er data wordt gestolen. In dat geval is er vaak ook financiële schade door de correctiekosten of door de uitval van de systemen. 
     </p>
+    <p>
+        Laten we nu eens testen of u in phishing zou trappen. <a href="zijpaginaQuiz.html">Klik hier voor de quiz</a>
+    </p>
 </article>
 
 <footer>&copy; 2024 | Gemaakt door Michelle en Mare</footer>
